--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,11 @@ nav {
     cursor: pointer;
 }
 
+nav ul {
+    flex: 1;
+    text-align: right;
+}
+
 nav ul li {
     display: inline-block;
     list-style: none;
@@ -114,3 +119,4 @@ span {
     width: 30px;
     cursor: pointer;
 }
+
