--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 .hero {
     height: 100vh;
     width: 100%;
-    background: #edf2fc;
+    background: var(--primary-color);
     font-family: sans-serif;
     position: relative;
 }
@@ -38,7 +38,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #606163;
+    color: var(--secondaty-color);
 }
 
 nav ul li a:hover {
@@ -52,7 +52,7 @@ nav ul li a:hover {
 
 .info h1 {
     font-size: 70px;
-    color: #212121;
+    color: var(--secondaty-color);
     margin-bottom: 20px;
 }
 
@@ -61,15 +61,15 @@ span {
 }
 
 .info p {
-    color: #606163;
+    color: var(--secondaty-color);
     line-height: 22px;
 }
 
 .info a {
-    background: #212121;
+    background: var(--secondaty-color);
     padding: 10px 18px;
     text-decoration: none;
-    color: #fff;
+    color: var(--primary-color);
     display: inline-block;
     margin: 30px 0;
     border-radius: 5px;
@@ -107,7 +107,7 @@ span {
 
 .social-links a {
     font-size: 30px;
-    color: #606163;
+    color: var(--secondaty-color);
     margin-right: 20px;
 }
 
@@ -120,3 +120,12 @@ span {
     cursor: pointer;
 }
 
+:root {
+    --primary-color: #edf2fc;
+    --secondaty-color: #212121;
+}
+
+.dark-theme {
+    --primary-color: #000106;
+    --secondaty-color: #fff;
+}
